--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,14 @@
 services:
+
   postgres:
+
     image: 'postgres:latest'
-    environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
     ports:
-      - '5432'
+      - ${EXTERNAL_PORT}:${INTERNAL_PORT}
+    volumes:
+      - ./data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_PASSWORD=${DATABASE_PASS}
+      - POSTGRES_USER=${DATABASE_USER}
+
